--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header{
+    background-color: #255EE9;
+}
+.white_box{
+    background-color: white;
+    width: auto;
+    max-height: 30px;
+    margin: 10px;
+    border-radius: 25px;font-weight: 600;
+
+}
